--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,6 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000/api"
+  "proxy": "https://blog-app-eight-nu.vercel.app/api"
   
 }
